2005-11-02  Jackson Harper  <jackson@ximian.com>

	* X11Dnd.cs: Make sure to send a status message if the pointer
	enters a control that can not accept a drop, otherwise the cursor
	isn't updated correctly. Also tried to compress the lines of code
	a bit.

2005-11-02  Jackson Harper  <jackson@ximian.com>

	* X11Dnd.cs: Change cursors based on drag action. Also attempt to
	set actions correctly.  This isn't perfect as XDND and win32 have
	some differences on how you allow actions. I'll clear this up by
	adding a path for drag from MWF to MWF windows.
	* XplatUIX11.cs: Hook into the dnd system.

2005-11-02  Jordi Mas i Hernandez <jmas@softcatala.org>

	* ListView.cs: Fixes scroll bar visibility. Hide them if they were
	previously shown but they are no longer need it. Very obvious when 
	browsing files with FileDialog.

2005-11-01  Peter Dennis Bartok  <pbartok@novell.com>

	* Control.cs: We always need to call OnPaintBackground. We pretty much
	  ignore AllPaintingInWmPaint and always do the painting there, whether 
	  it's set or not, since we always ignore the WM_ERASEBKGND message 
	  (which we don't generate on X11). This fixes #76616.
	* Panel.cs: Removed unneeded background painting. This happens properly
	  in Control.cs already

2005-10-31  Mike Kestner  <mkestner@novell.com>

	* Menu.cs: Add items to collection before setting their index.
	* MenuItem.cs : add range checking with ArgumentException like MS.
	[Fixes #76510]

2005-10-31  Jackson Harper  <jackson@ximian.com>

	* ListBox.cs: Invalidate if the area is visible at all not just
	contained in the visible rect. Fixes unselection of semi visible
	items.

2005-10-31  Jackson Harper  <jackson@ximian.com>

	* Control.cs: Consistently name the dnd methods. Make them
	internal so we can override them to match some MS behavoir
	internally.
	* Win32DnD.cs: Use the new consistent names.

2005-10-31  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Don't draw the selected node when we lose focus.
