@@ -34,7 +34,7 @@ EXTRA_DISTFILES = \
 	README System.Windows.Forms.dll.resources \
 	$(RESX_RESOURCES:.resources=.resx) $(CUR_RESOURCES) $(PREBUILT) build-csproj
 
-TEST_MCS_FLAGS = /r:System.Drawing.dll
+TEST_MCS_FLAGS = /r:System.Drawing.dll -resource:Test/resources/a.cur,a.cur
 
 SWF.csproj: System.Windows.Forms.dll.sources
 	./build-csproj
